--- a/second.css
+++ b/second.css
@@ -67,6 +67,11 @@ text-transform: capitalize;
 
 /* Banner Section  */
 
+.back-button{
+  top:20px;
+  left: 12px;
+}
+
 .top-banner {
   width: 100%;
   height: 350px;
@@ -79,8 +84,24 @@ text-transform: capitalize;
   color: white;
   font-size: 2em;
   font-weight: bold;
-  margin-top: 40px;
+  margin-top: 70px;
   margin-bottom: 30px;
+}
+
+.top-banner a , .top-banner.active{
+  font-size: 18px;
+  text-transform: capitalize;
+  color: #131212;
+  font-weight: 300;
+  letter-spacing: normal;
+}
+
+.breadcrumb-item.active {
+  color: #0a0a0a !important;
+}
+
+.top-banner li{
+  font-size: 18px;
 }
   
   
@@ -878,7 +899,8 @@ color: #212529;
 /* Advantages Page  */
 
 .adv-section{
-z-index: 101000;
+/* z-index: 101000; */
+width: 92%
 }
 
 .adv-card {
@@ -934,13 +956,16 @@ z-index: 101000;
 
 
 /* Initiatives  */
+
 .initiative-top{
-    /* margin-top: 100px; */
+    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    width: 72%;
+    box-shadow: 0 4px 8px rgba(151, 151, 151, 0.377);
 }
 
 .first-initiative {
@@ -953,14 +978,10 @@ z-index: 101000;
 .initi-img{
 width: 100%;
 height: 300px; 
-object-fit: contain; 
-}
-
-.first-initi-img{
-  width: 100%;
-
 object-fit: cover; 
 }
+
+
 
  
 .master-heading{
@@ -968,26 +989,24 @@ margin-top: 50px;
 }
 
 .first-details{
-  padding-right: 30px;
+  width: 100%;
 }
 
-.details{
-    
-  margin-top: 10px;
-}
 
 .center-content{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px;
+    /* margin: 20px; */
 }
 
 .methods{ 
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
+
+  width: 78%
   
 }
 
@@ -995,38 +1014,35 @@ margin-top: 50px;
     /* border: 1px solid black; */
     /* justify-content: space-around; */
     width: 25%;
+    box-shadow: 0 4px 8px rgba(151, 151, 151, 0.377);
 }
 .method-card img {
     width: 100%;
     height: 200px;
-    object-fit: contain;
+    object-fit: cover;
 }
 .methods-desc{
     text-align: center;
-    padding: 10px 65px !important;
-    
-    
+    padding: 10px 20px !important; 
 }
 
-.planting-section p,h1{
-  padding-left: 80px;
+.planting-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.side-padding{
-  /* padding-left: 150px; */
-  /* padding-right: 150px; */
-}
+
+
 
   /* New section styles */
   .carbon_img{
-    width: 80%;
+    width: 72%;
     /* height: 50vh; */
   }
 
  
-
- 
-
 
 /* CONTACT US FORM  */
 
@@ -1238,7 +1254,7 @@ margin-top: 50px;
   flex-direction: column;
   width: 300px;
   background-color: #fff;
-  box-shadow: 0 4px 8px rgba(238, 112, 112, 0.192);
+  box-shadow: 0 4px 8px rgba(238, 112, 112, 0.1);
   border-radius: 8px;
   overflow: hidden;
   z-index: 12;
