--- a/second.css
+++ b/second.css
@@ -429,10 +429,6 @@ padding: 0 10px
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.desc-font-size{
- 
-}
-
 .mission-content,
 .mission-img {
   flex: 1;
@@ -440,8 +436,6 @@ padding: 0 10px
   flex-direction: column;
   justify-content: center;
   padding: 0;
-
-
 }
 
 .mission-content h3,
@@ -460,13 +454,14 @@ padding: 0 10px
   object-fit: cover;
   border-radius: 8px;
   padding: 0;
-
 }
 .sec-miss-img{
 width: 100% !important;
 }
 
 /* Mission end  */
+
+
 
 /* why-choose  */
 .why-choose {
@@ -503,6 +498,8 @@ width: 100% !important;
   margin-bottom: 10px;
 }
 /* why choose ends  */
+
+
 
 .why-chooose{
   display: flex;
@@ -880,6 +877,14 @@ line-height: 50px;
   .about-points{
     padding: 50px 30px;
   }
+
+  .about-part-points{
+    
+    padding: 20px 10px 20px 10px;
+    align-items: stretch;
+    margin: 10px 0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
   /* About us Page End  */
 
 /* Privacy-Poilicy */
@@ -962,7 +967,6 @@ width: 92%
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     flex-direction: row;
     width: 72%;
     box-shadow: 0 4px 8px rgba(151, 151, 151, 0.377);
@@ -1238,10 +1242,11 @@ margin-top: 50px;
 
  /* New Safety  */
  .new-safety-card-section {
-  padding: 0px 40px;
+  padding: 20px 40px;
   display: flex;
   justify-content: center;
-  background-color: #fff;
+  background-color: #f9e5e5;
+  width: 72%;
 }
 
 .new-safety-card-container {
@@ -1286,7 +1291,7 @@ margin-top: 50px;
 }
 
 .new-safety-card-footer {
-  padding: 30px 20px;
+  padding: 10px 20px 20px 20px;
   
   /* text-align: center; */
 }
