--- a/second.css
+++ b/second.css
@@ -2,8 +2,12 @@
 
 p{
   font-family: poppins !important;
-}
+  color: #212529;
 
+}
+h1,h2,h3,h4,h5,h6{
+  font-family: poppins !important;
+}
 a{
   text-decoration: none !important;
 }
@@ -61,7 +65,7 @@ button{
   /* margin-bottom: -50px; */
 }
 .super-sub-points{
-font-size: 25px;
+font-size: 23px;
 text-transform: capitalize;
 }
 
@@ -445,7 +449,6 @@ padding: 0 10px
 
 .mission-content p {
   margin-top: 10px;
-  font-size: 20px;
 }
 
 .mission-img img {
@@ -687,19 +690,16 @@ height: 100px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-   
-
    width: 75%;
     /* align-items: stretch; */
     margin: 10px 0;
-   
     background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     
 }
 
-.safety-text p{
-  padding: 20px; 
+.safety-text p {
+  padding: 5px 20px 20px 20px;
 }
 
 .text-shrink{
@@ -885,6 +885,8 @@ line-height: 50px;
     margin: 10px 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
+
+  
   /* About us Page End  */
 
 /* Privacy-Poilicy */
@@ -980,9 +982,9 @@ width: 92%
   width: 70%;
 }
 .initi-img{
-width: 100%;
-height: 300px; 
-object-fit: cover; 
+/* width: 100%; */
+height: 250px; 
+object-fit: contain; 
 }
 
 
@@ -1077,44 +1079,6 @@ margin-top: 50px;
             background-color: #f8f9fa;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
           }
-
-
-/* Additional adjustments for very small screens */
-@media only screen and (max-width: 480px) {
-  .mission-content h3 {
-    font-size: 18px; /* Decrease heading font size for smaller screens */
-  }
-  
-  .mission-content p {
-    font-size: 14px; /* Decrease paragraph font size for smaller screens */
-  }
-}
-
-
-/* Additional adjustments for very small screens */
-@media only screen and (max-width: 480px) {
-  .mission-content h3 {
-    font-size: 18px; /* Decrease heading font size for smaller screens */
-  }
-  
-  .mission-content p {
-    font-size: 14px; /* Decrease paragraph font size for smaller screens */
-  }
-}
-
-/* Additional adjustments for very small screens */
-@media only screen and (max-width: 480px) {
-  .mission-content h3 {
-    font-size: 18px; /* Decrease heading font size for smaller screens */
-  }
-  
-  .mission-content p {
-    font-size: 14px; /* Decrease paragraph font size for smaller screens */
-  }
-}
-
-
-
 
 
 
@@ -1269,7 +1233,7 @@ margin-top: 50px;
   z-index: 12;
   width: 100%;
   height: 200px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .new-safety-card-content {
