--- a/second.css
+++ b/second.css
@@ -33,7 +33,7 @@ button{
   content: "\f106";
   font-size: 40px;}
 
-  
+
 .section-margin{
   margin-top: 70px;
 }
@@ -64,7 +64,7 @@ button{
     left: 0;
     right: 0;
     margin: 0 auto;
-    bottom: -3px;
+    bottom: -10px;
 }
 
 .master-head{
@@ -1000,14 +1000,14 @@ object-fit: contain;
 }
 
 
-
- 
-.master-heading{
-margin-top: 50px;
-}
-
 .first-details{
   width: 100%;
+}
+
+@media only screen and (max-width: 570px) { 
+  .first-details{
+    font-size: 16px;
+  }
 }
 
 .details{
@@ -1027,10 +1027,13 @@ margin-top: 50px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-
+flex-wrap: wrap;
   width: 78%
-  
 }
+
+
+
+
 
 .method-card{
     /* border: 1px solid black; */
@@ -1048,6 +1051,19 @@ margin-top: 50px;
     padding: 10px 20px !important; 
 }
 
+@media only screen and (max-width: 700px) { 
+  .methods{
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+  }
+  .method-card {
+    /* border: 1px solid black; */
+    /* justify-content: space-arousnd; */
+    width: 85%;
+    margin: 20px;
+}
+}
 .planting-section{
   display: flex;
   flex-direction: column;
@@ -1400,7 +1416,7 @@ margin-top: 50px;
     }
     .customer-item img {
         width: 100%;
-        height: auto;
+        /* height: auto; */
         object-fit: contain;
         max-height: 200px;
     }
