--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ a:hover {
   -o-transition-duration: 500ms;
   transition-duration: 500ms;
   outline: none;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 300;
 }
 
@@ -2389,11 +2389,11 @@ background-color: #ffe1e1;
   margin-bottom: 40px;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+/* @media only screen and (min-width: 768px) and (max-width: 991px) {
   .breadcrumb-area {
     height: 220px;
   }
-}
+} */
 
 @media only screen and (max-width: 767px) {
   .breadcrumb-area {
