--- a/second.css
+++ b/second.css
@@ -46,15 +46,15 @@ button{
   align-items: center;
   z-index: 999;
   background-color: #ffffff;
-
+  border: 1px solid black;
 text-align: center;
 font-size: 50px;
 line-height: 45px;
 -webkit-transition-duration: 500ms;
 -o-transition-duration: 500ms;
 transition-duration: 500ms;
--webkit-box-shadow: var(--pr-shadow);
-box-shadow: var(--pr-shadow);
+/* -webkit-box-shadow: var(--pr-shadow); */
+/* box-shadow: var(--pr-shadow); */
 }
 
 .sticky-button:hover {
@@ -77,11 +77,19 @@ text-align: center;
 .social-media-accordion {
   position: fixed;
   bottom: 50px;
-  right: 0px;
+  right: 10px;
   z-index: 1000;
   display: flex;
 flex-direction: column;
 align-items: center;
+transition: opacity 0.5s ease, visibility 0.5s ease; /* Smooth transition */
+  opacity: 1;
+  visibility: visible;
+}
+
+.social-media-accordion.hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .accordion-btn {
@@ -99,7 +107,7 @@ align-items: center;
   width: 40px;
   height: 40px;
   margin: 5px;
-  box-shadow: 0 0px 2px 2px rgb(249 229 229);
+  box-shadow: 0 0px 1px 1px rgb(249 229 229);
 }
 
 .accordion-btn:hover {
@@ -194,7 +202,8 @@ text-transform: capitalize;
 
 .top-banner {
   width: 100%;
-  height: 350px;
+  /* height: 350px; */
+  height: 70vh;
   background: url('images/Rider\ image-04.png') no-repeat center center;
   background-size: cover;
   opacity: 1;
@@ -308,53 +317,25 @@ text-align: justify;
   padding: 6px 11px;
   text-decoration: none;
   color:white;
-  font-size: 17px;
+  font-size: 15px;
   border-radius: 25px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
  
 }
+.know-more:hover{
+  color: white;
+}
+
 
 .accordion{
 width: 50%;
 z-index: 100;
 }
+
 .accordion-button{
 font-size: 20px !important;
 font-weight: 500;
-}
-/* Login Form  */
-.login{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-background-color: rgb(255, 255, 255);
-border-radius: 20px;
-box-shadow: 0px 0px 4px rgb(197 10 10);
-margin: 10px;
-}
-
-.login label{
-  font-size: 1rem;
-}
-
-.login-form{
-
- /* font-family: Aileron; */
-display: flex;
-justify-content: center;
-align-items: center;
-
-border-radius: 10px;
-}
-
-.log-sec {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  flex-direction: column;
 }
 
 .reg-but{
@@ -377,37 +358,6 @@ border: 1px solid  white;
   align-items: center;
   justify-content: center;
   padding: 5px 20px;
-}
-
-.login-form input{
-  width: 100%;
-  margin-left:5%;
-  border-radius: 20px;
-}
-
-.login-form-body{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.loginBTN{
-  background-color: #C30000;
-  color: white;
-  padding: 5px 10px;
-  text-align: center;
-  font-size: 1rem;
-  border-radius: 10px;
-  border: none;
-  margin: 10px 0;
-  border: 1px solid  white;
-}
-
-.loginBTN:hover{
-  background-color:white;
-  color: #C30000;
-  border: 1px solid  #C30000;
 }
 
 #toggle-password {
@@ -479,15 +429,14 @@ border: 1px solid  white;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 50px;
+  gap: 30px;
   padding: 20px 0;
   align-items: stretch;
   margin: 10px 0;
   background-color: white;
   box-shadow: 0 4px 8px rgba(245, 198, 198, 0.1);
   border-radius: 8px;
-  transition: #fde8e8 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
-
+  transition: #fde8e8 1.5s ease-in-out, box-shadow 1.5s ease-in-out;
 }
 
 .about-us-content:hover {
@@ -496,13 +445,22 @@ border: 1px solid  white;
 }
 
 
-.mission-content,
+.mission-content{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+ 
+}
+
 .mission-img {
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 0;
+  align-items: center;
 }
 
 .mission-content h3,
@@ -515,7 +473,7 @@ border: 1px solid  white;
 }
 
 .mission-img img {
-  width: 50%;
+  width: 40%;
   height: 100%;
   object-fit: cover;
   border-radius: 8px;
@@ -523,9 +481,12 @@ border: 1px solid  white;
 }
 
 .sec-miss-img {
-  width: 100% !important;
+  width: 80% !important;
 }
 
+.third-miss{
+  width: 70% !important;
+}
 /* Mission end ----------------------------------------------------------------------------------------------------------------*/
 
 /* why-choose  */
@@ -809,6 +770,7 @@ padding: 0 70px;
     text-align: center;
     justify-content: center;
 }
+
 .safety-cards img{
     width: 100px;
     height: 100px;
@@ -948,6 +910,17 @@ line-height: 50px;
     justify-content: center;
     align-items: center;
   }
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  
+  /* Firefox */
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
+
 
   /* About us Page  */
 
@@ -956,7 +929,6 @@ line-height: 50px;
   }
 
   .about-part-points{
-    
     padding: 20px 10px 20px 10px;
     align-items: stretch;
     margin: 10px 0;
@@ -1050,6 +1022,55 @@ width: 92%
     border-radius: 8px;
 }
 
+.image-container {
+  /* Set the container to have a fixed height */
+  height: 400px;
+
+  /* Set the container to take up 75% of the horizontal space */
+  width: 72%;
+  margin: 0 auto;
+  /* Center the container horizontally */
+
+  /* Position the content overlay on top of the image */
+  position: relative;
+}
+
+.first-initi-img {
+  /* Cover the entire container */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Reduce opacity */
+  opacity: 0.4;
+}
+
+.content-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(151, 141, 141, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+
+
+.bread-container {
+  display: flex;
+  align-items: flex-start;
+}
+.text {
+  flex: 1;
+  padding-left: 20px; /* Adjust as needed */
+}
+img {
+  max-width: 100%;
+}
 .first-initiative {
   display: flex ;
   flex-direction: row;
@@ -1092,7 +1113,7 @@ object-fit: contain;
   flex-direction: row;
   justify-content: space-around;
 flex-wrap: wrap;
-  width: 78%
+  width: 73%
 }
 
 
@@ -1100,21 +1121,23 @@ flex-wrap: wrap;
 
 
 .method-card{
-    /* border: 1px solid black; */
-    /* justify-content: space-around; */
-    width: 25%;
+    width: 31%;
     box-shadow: 0 4px 8px rgba(151, 151, 151, 0.377);
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 .method-card img {
     width: 100%;
     height: 200px;
     object-fit: contain;
     margin-top: 5px;
 }
-.methods-desc{
-    text-align: center;
-    padding: 10px 20px !important; 
+
+.methods-desc p{
+  padding: 10px 20px; 
 }
 
 @media only screen and (max-width: 700px) { 
@@ -1130,6 +1153,7 @@ flex-wrap: wrap;
     margin: 20px;
 }
 }
+
 .planting-section{
   display: flex;
   flex-direction: column;
@@ -1146,10 +1170,7 @@ flex-wrap: wrap;
     /* height: 50vh; */
   }
 
- 
-
 /* CONTACT US FORM  */
-
 
 .sub-btn{
     /* background-color:var(--primary-clr); */
@@ -1315,12 +1336,14 @@ flex-wrap: wrap;
 .new-safety-card-container {
   display: flex;
   gap: 50px;
+  justify-content: center;
 }
 
 .new-safety-card {
   display: flex;
   flex-direction: column;
-  width: 300px;
+
+  width: 40%;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
   border-radius: 8px;
@@ -1355,8 +1378,6 @@ flex-wrap: wrap;
 
 .new-safety-card-footer {
   padding: 10px 20px 20px 20px;
-  
-  /* text-align: center; */
 }
 
 .separate-safety {
